# eva-desktop

./: README.md  package.json  pnpm-lock.yaml
.github/instructions/: implementation-rule.instructions.md
docs/: AUDIO_DEBUG.md  PORCUPINE_INTEGRATION.md  PORCUPINE_SETUP.md  UI_WAKE_WORD_UPDATES.md  WAKE_WORD_TROUBLESHOOTING.md
src/: App.css  App.tsx  TailwindTest.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/models/: Hi-Eva.ppn  README.md
src-tauri/src/: audio_capture.rs  lib.rs  main.rs  openai_realtime.rs  openai_realtime_new.rs  porcupine_service.rs  wake_word.rs
src-tauri/src/audio/: config.rs  mod.rs
src/components/: ApiKeySetup.tsx  AudioDebugTest.tsx  OpenAIChat.tsx  OpenAIChatNew.tsx  PorcupineTest.tsx
src/services/: audio-capture.ts  audio-playback.ts  openai-simple.ts
