[package]
name = "eva-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eva_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pv_porcupine = "3.0.3"
cpal = "0.15"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
# Audio resampling and processing
rubato = "0.15"
# WAV file writing for debugging
hound = "3.5"
# Secure keychain storage for access keys
keyring = "3.0"
# Logging
log = "0.4"
env_logger = "0.11"
# HTTP client for OpenAI API (will be used by frontend)
reqwest = { version = "0.12", features = ["json", "stream"] }
# Base64 encoding for audio
base64 = "0.22"
# UUID for session management
uuid = { version = "1.0", features = ["v4"] }

